--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="icon1.png">
+    <link rel="shortcut icon" type="image/png" href="img/icon1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>TASK - life made easy</title>
@@ -13,7 +13,7 @@
 
 <header>
   <a class="navbar-brand" href="index.html" style="display: flex; align-items: center;">
-    <img src="16.png" alt="Logo" width="150px" height="50px">
+    <img src="img/16.png" alt="Logo" width="150px" height="50px">
     <!-- <h1 style="color: wheat; margin-left: 10px;">TASK</h1> -->
   </a>
   <h3 class="sublogo">- Your Ultimate Notes and Task Management Solution -</h3>
@@ -31,73 +31,12 @@
       <a href="register.html">Get Started</a>
   </div>
 </section>
-<!-- <div class="content-container">
-<img src="19.jpg" alt="" class="img2">
-<div class="content2">
-  <h3>Intuitive Note-Taking:</h3>
-  <p>Create, edit, and organize notes effortlessly. Rich text formatting options to highlight important information.</p>
-  <a href="register.html">Register Now!</a>
-</div>
-
-<img src="20.jpg" alt="" class="img2">
-<div class="content2">
-  <h3>Cross-Platform Accessibility:</h3>
-  <p> Access your notes and tasks from any device: desktop, tablet, or smartphone. Seamless synchronization across all your devices.</p>
-  <a href="register.html">Test us!</a>
-</div>
-
-<img src="21.jpg" alt="" class="img2">
-<div class="content2">
-  <h3>Task Management:</h3>
-  <p>Add tasks with due dates, priorities, and categories. Subtasks and checklists to break down complex tasks.</p>
-  <a href="register.html">Try it out, Champ!!</a>
-</div>
-</div> -->
-
-<!-- <div id="carouselExampleCaptions" class="carousel-slide">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="13.jpg" class="d-block" alt="...">
-      <div class="carousel-caption">
-        <h5>Personalized Experience</h5>
-        <p> Benefit from personalized dashboards and notifications tailored to your needs.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="9.jpg" class="d-block" alt="...">
-      <div class="carousel-caption">
-        <h5>Centralized Resource Access</h5>
-        <p>Explore professional development opportunities from one centralized location.</p>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="12.jpg" class="d-block" alt="...">
-      <div class="carousel-caption">
-        <h5>Compliance Assurance</h5>
-        <p>Ensure compliance with company policies and regulations by utilizing the portal.</p>
-      </div>
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div> -->
 <section class="sec-01">
   <div class="container">
-    <h2 class="main-title">Services we provide</h2>
+    <h2 class="main-title">SERVICES WE PROVIDE:-</h2>
     <div class="content" style="display: flex">
     <div class="image" style="margin-bottom: 150px;">
-      <img src="19.jpg" alt="">
+      <img src="img/19.jpg" alt="">
     </div>
     <div class="text-box" style="margin-bottom: 100px;">
       <h3>Intuitive Note-Taking:</h3>
@@ -107,7 +46,7 @@
   </div>
   <div class="content" style="display: flex">
     <div class="image" style="margin-bottom: 150px;">
-      <img src="20.jpg" alt="">
+      <img src="img/20.jpg" alt="">
     </div>
     <div class="text-box" style="margin-bottom: 100px;">
       <h3>Cross-Platform Accessibility:</h3>
@@ -117,7 +56,7 @@
   </div>
   <div class="content" style="display: flex">
     <div class="image" style="margin-bottom: 150px;">
-      <img src="21.jpg" alt="">
+      <img src="img/21.jpg" alt="">
     </div>
     <div class="text-box" style="margin-bottom: 100px;">
       <h3>Task Management:</h3>
@@ -132,27 +71,11 @@
     <p>&copy; 2024 powered by Sajjad. All Rights Reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <!-- <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.carousel-slide');
-
-    function showSlide(n) {
-        slides.forEach(slide => slide.style.display = 'none');
-        slides[n].style.display = 'block';
-    }
-
-    function nextSlide() {
-        currentSlide = (currentSlide + 1) % slides.length;
-        showSlide(currentSlide);
-    }
-
-    setInterval(nextSlide, 3000); // Automatically advance slides every 3 seconds
-  </script> -->
  <script>
   ScrollReveal({
     reset: true,
     distance:'60px',
-    duration: 2500,
+    duration: 1000,
     delay: 400
   })
   ScrollReveal().reveal('.content', {delay: 250});
