--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="icon1.png">
+    <link rel="shortcut icon" type="image/png" href="img/icon1.png">
     <script src="https://unpkg.com/scrollreveal"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <title>Login, fast!</title>
@@ -12,8 +12,7 @@
   <body class="home" id="loginhome">
     <header>
       <a class="navbar-brand" href="index.html" style="display: flex; align-items: center;">
-        <img src="16.png" alt="Logo" width="150px" height="50px">
-        <!-- <h1 style="color: wheat; margin-left: 10px;">TASK</h1> -->
+        <img src="img/16.png" alt="Logo" width="150px" height="50px">
       </a>
       <h3 class="sublogo">- Your Ultimate Notes and Task Management Solution -</h3>
       <div class="navbar">
@@ -53,7 +52,7 @@
               ScrollReveal({
                 reset: true,
                 distance:'60px',
-                duration: 2500,
+                duration: 300,
                 delay: 400
               })
               ScrollReveal().reveal('.input-con', {delay: 250,});
