--- a/register.html
+++ b/register.html
@@ -5,15 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Now!</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/png" href="icon1.png">
+    <link rel="shortcut icon" type="image/png" href="img/icon1.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://unpkg.com/scrollreveal"></script>
 </head>
   <body class="home" id="registerhome">
     <header>
         <a class="navbar-brand" href="index.html" style="display: flex; align-items: center;">
-            <img src="16.png" alt="Logo" width="150px" height="50px">
-            <!-- <h1 style="color: wheat; margin-left: 10px;">TASK</h1> -->
+            <img src="img/16.png" alt="Logo" width="150px" height="50px">
           </a>
           <h3 class="sublogo">- Your Ultimate Notes and Task Management Solution -</h3>
       <div class="navbar">
@@ -24,10 +23,10 @@
       </div>
       </header>
       <div class="container-md" style="max-width: 500px; margin-top: 150px; height: 80vh;">
-        <h1 class="logo">Let's get registered!</h1>
+        <h1 class="logo" style="text-align: center;">Let's get registered!</h1>
         <form action="dbregister.php" method="POST">
             <div class="input-group">
-                <input type="email" class="emailadd" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="Email address" required>
+                <input type="email" class="emailadd" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" placeholder="Email Address" required>
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="input-group">
@@ -72,7 +71,7 @@
         ScrollReveal({
           reset: true,
           distance:'60px',
-          duration: 2500,
+          duration: 300,
           delay: 400
         })
         ScrollReveal().reveal('.container-md', {delay: 250, origin: 'left'});
