modified:   index.html modified:   login.html

--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                 duration: 300,
                 delay: 400
               })
-              ScrollReveal().reveal('.input-con', {delay: 250,});
+              ScrollReveal().reveal('.input-con', {delay: 250, origin: 'left'});
              </script>
           </body>
     </body>
